# sindy-cf

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: ss3000_ap2.0_ft600_ad10.0_f50k.csv  test.csv  train.csv
models/: test.pth
src/: configs.py  datasets.py  helpers.py  inference.py  train.py  transforms.py
src/models/: multinomial_regression.py  nonlinear_regression.py
